@@ -32,7 +32,8 @@
 mp_err s_mp_toom_mul(const mp_int *a, const mp_int *b, mp_int *c)
 {
    mp_int S1, S2, T1, a0, a1, a2, b0, b1, b2;
-   int err, B, count;
+   int B, count;
+   mp_err err;
 
    /* init temps */
    if ((err = mp_init_multi(&S1, &S2, &T1, NULL)) != MP_OKAY) {
