@@ -27,10 +27,12 @@ v1.2.0
        -- The custom allocators which were formerly known as XMALLOC(), XFREE() etc. are now available
           as MP_MALLOC(), MP_REALLOC(), MP_CALLOC() and MP_FREE(). MP_REALLOC() and MP_FREE() now also
           provide the allocated size to ease the usage of simple allocators without tracking.
+       -- Building is now also possible with MSVC 2015, 2017 and 2019 (use makefile.msvc)
        -- Added mp_decr() and mp_incr()
        -- Added mp_log_u32()
        -- Improved prime-checking
        -- Improved Toom-Cook multiplication
+       -- Removed the LTM book (`make docs` now builds the user manual)
 
 
 Jan 28th, 2019
